modifique reseña de melba

--- a/views/melba.html
+++ b/views/melba.html
@@ -15,7 +15,7 @@
                 <h1>Melba</h1>
                 <p><strong>Profesión: </strong>Cuidar el balcón</p>
                 <p><strong>País: </strong>Argentina</p>
-                <p><strong>Reseña: </strong> Melba (Capital Federal, 15 de Abril de 2017 - para siempre en nuestros corazones).La cracka de Melba se porta muy bien. En Abril del 2022 se graduó de la escuelita de obediencia básica, con honores.</p>
+                <p><strong>Reseña: </strong> Melba (Capital Federal, 15 de Abril de 2017 - para siempre en nuestros corazones).La cracka de Melba se porta muy bien. En Abril del 2022 se graduó de la escuelita de obediencia básica, con honores. La picó una abeja y casi se muere.</p>
                 <a href="/"><button>Volver</button></a>
             </div>
         </div>
